cleaning up warnings (bug 13469)